# ruster

./: Cargo.toml  PKGBUILD  README.md  commands.md  new-req.md  proxy.md  ruster.service  skills.md  spec.md  test-skill.md  tools.md
skills/web-browsing/scripts/: browser-active.sh
src/: config.rs  llm.rs  logging.rs  main.rs  proactive.rs  server.rs  session.rs  skills.rs
