[package]
name = "ruster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-openai = "0.33.0"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
config = "0.15.19"
futures-util = "0.3.32"
glob = "0.3.3"
home = "0.5.12"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
